ICE-10635 have logic correct in js and css now but effects are not showing. Probably due to update of the nodes when server side is used.  Will review the markup to see if an outer wrapper div can be used.
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@45953 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/notificationpanel/notificationpanel.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/notificationpanel/notificationpanel.css
@@ -14,4 +14,4 @@
  * governing permissions and limitations under the License.
  */
 
-.ui-notificationbar{position:fixed;width:100%;height:100px;display:none;padding:10px;z-index:10;}.ui-notificationbar-close{position:absolute;right:3em;top:1em;cursor:pointer;font-size:24px;}
+.ui-notificationbar{position:fixed;width:100%;height:100px;padding:10px;z-index:10;}.ui-notificationbar-close{position:absolute;right:3em;top:1em;cursor:pointer;font-size:24px;}
